test/fixtures/expressions/invalid_contents/escape.mf2
{1 abc\a}
=== spans ===
                    {1 abc\a}
Pattern             ^^^^^^^^^ 0:0-0:9
LiteralExpression   ^^^^^^^^^ 0:0-0:9
Number               ^        0:1-0:2
Number.integral      ^        0:1-0:2
=== diagnostics ===
The character 'a' can not be escaped, as escape sequences can only escape '}', '{', '|', and '\'. (at @6..8)
  {1 abc\a}
        ^^
Placeholder expression contains invalid content. (at @3..8)
  {1 abc\a}
     ^^^^^
=== fixed ===
Remove backslash:
  {1 abca}

=== formatted ===
(cannot format due to fatal errors)
=== ast ===
Pattern {
    parts: [
        LiteralExpression {
            span: @0..9,
            literal: Number {
                start: @1,
                raw: "1",
                is_negative: false,
                integral_len: 1,
                fractional_len: None,
                exponent_len: None,
            },
            annotation: None,
            attributes: [],
        },
    ],
}